+ IPR functionality
